--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: var(--border-radius);
     background-color: white;
     box-shadow: var(--shadow);
+    display: none;
 }
 
 .leaderboard {
